linked to new athlyte pages

--- a/project_new_athylte.html
+++ b/project_new_athylte.html
@@ -97,17 +97,26 @@
                 margin-right: 12px;
                 color: white;
                 font-size: 20px;
+                text-decoration: none;
+
+            }
+
+            .sidebar-item a {
+                text-decoration: none;
+                color: aliceblue;
+
             }
 
 
             .sidebar-item:hover {
-                background-color: rgb(236, 234, 234);
-                color: #73d2e7;
+                background-color: rgb(163, 227, 241);
+                color: white;
             }
 
             .sidebar-item:hover i {
-                color: #73d2e7;
+                color: white;
             }
+
 
 
             /* Main Content Styles */
@@ -1036,23 +1045,23 @@ class="logo-above-sidebar"
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">description</i>
-                <a href="project_new_content_draft.html"> Content Draft </a>
+                <a href="project_new_content_draft_athylete.html"> Content Draft </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">brush</i>
-                <a href="projetc_new_graphics.html"> Graphics </a>
+                <a href="projetc_new_graphics_athlyte.html"> Graphics </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">share</i>
-                <a href="projetc_new_marketing.html"> Marketing </a>
+                <a href="projetc_new_marketing_athlyte.html"> Marketing </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">publish</i>
-                <a href="project_new_publish.html"> Publish </a>
+                <a href="project_new_publish_athlyte.html"> Publish </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">equalizer</i>
-                <a href="project_new_analytics.html"> Analytics</a>
+                <a href="project_new_analytics_athlyte.html"> Analytics</a>
             </div>
         </nav>
 
