--- a/project_new_publish_athlyte.html
+++ b/project_new_publish_athlyte.html
@@ -872,7 +872,7 @@
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">equalizer</i>
-                <a href="project_new_analytics.html"> Analytics</a>
+                <a href="project_new_analytics_athlyte.html"> Analytics</a>
             </div>
         </nav>
 
