--- a/project_new_research_page_athylete.html
+++ b/project_new_research_page_athylete.html
@@ -191,6 +191,8 @@
             color: white;
             margin-bottom: 20px;
             font-size: 1.5rem;
+            text-decoration: none;
+
         }
 
         .nav-item {
@@ -218,10 +220,22 @@
             margin-right: 12px;
         }
 
-        .nav-item:hover {
-            background-color: rgb(236, 234, 234);
-            color: #73d2e7;
-        }
+        .nav-item a {
+                text-decoration: none;
+                color: aliceblue;
+
+            }
+
+
+            .nav-item:hover {
+                background-color: rgb(163, 227, 241);
+                color: white;
+            }
+
+            .nav-item:hover i {
+                color: white;
+            }
+
 
         /* Main content styles */
         .main-content {
@@ -1474,24 +1488,24 @@ class="logo-above-sidebar"
         </div>
         <div class="nav-item">
             <i class="material-icons">description</i>
-            <a href="project_new_content_draft.html"> Content Draft</a>
+            <a href="project_new_content_draft_athylete.html"> Content Draft</a>
         </div>
         <div class="nav-item">
             <i class="material-icons">brush</i>
-            <a href="projetc_new_graphics.html"> Graphics</a>
+            <a href="projetc_new_graphics_athlyte.html"> Graphics</a>
         </div>
         <div class="nav-item">
             <i class="material-icons">share</i>
-            <a href="projetc_new_marketing.html"> Marketing</a>
+            <a href="projetc_new_marketing_athlyte.html"> Marketing</a>
         </div>
         <div class="nav-item">
             <i class="material-icons">share</i>
-            <a href="project_new_publish.html"> Publish</a>
+            <a href="project_new_publish_athlyte.html"> Publish</a>
         </div>
 
         <div class="nav-item">
             <i class="material-icons">equalizer</i>
-            <a href="project_new_analytics.html"> Analytics</a>
+            <a href="project_new_analytics_athlyte.html"> Analytics</a>
         </div>
     </aside>
 
