--- a/projetc_new_graphics_athlyte.html
+++ b/projetc_new_graphics_athlyte.html
@@ -79,18 +79,23 @@
                 margin-right: 12px;
                 color: white;
                 font-size: 20px;
+           
+            }
+
+            .sidebar-item a {
                 text-decoration: none;
+                color: aliceblue;
 
             }
 
 
             .sidebar-item:hover {
-                background-color: rgb(236, 234, 234);
-                color: #73d2e7;
+                background-color: rgb(163, 227, 241);
+                color: white;
             }
 
             .sidebar-item:hover i {
-                color: #73d2e7;
+                color: white;
             }
 
 
@@ -1160,11 +1165,11 @@
         </div>
         <div class="sidebar-item">
             <i class="material-icons">publish</i>
-            <a href="project_new_publish.html"> Publish </a>
+            <a href="project_new_publish_athlyte.html"> Publish </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">equalizer</i>
-            <a href="project_new_analytics.html"> Analytics</a>
+            <a href="project_new_analytics_athlyte.html"> Analytics</a>
         </div>
     </nav>
 
