--- a/project_new_content_draft_athylete.html
+++ b/project_new_content_draft_athylete.html
@@ -86,14 +86,20 @@
                 font-size: 20px;
             }
 
+            .sidebar-item a {
+                text-decoration: none;
+                color: aliceblue;
+
+            }
+
 
             .sidebar-item:hover {
-                background-color: rgb(236, 234, 234);
-                color: #73d2e7;
+                background-color: rgb(163, 227, 241);
+                color: white;
             }
 
             .sidebar-item:hover i {
-                color: #73d2e7;
+                color: white;
             }
 
 
@@ -1448,19 +1454,19 @@ class="logo-above-sidebar"
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">brush</i>
-                <a href="projetc_new_graphics.html"> Graphics</a>
+                <a href="projetc_new_graphics_athlyte.html"> Graphics</a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">share</i>
-                <a href="projetc_new_marketing.html"> Marketing</a>
+                <a href="projetc_new_marketing_athlyte.html"> Marketing</a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">publish</i>
-                <a href="project_new_publish.html"> Publish</a>
+                <a href="project_new_publish_athlyte.html"> Publish</a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">equalizer</i>
-                <a href="project_new_analytics.html"> Analytics</a>
+                <a href="project_new_analytics_athlyte.html"> Analytics</a>
             </div>
         </aside>
 
@@ -1471,7 +1477,7 @@ class="logo-above-sidebar"
             <header class="fsu-header">
                 <div class="header-container">
                     <div class="logo-container">
-                        <h1 class="site-title">FSU Football Season 2025</h1>
+                        <h1 class="site-title">2023 Football Season Recap</h1>
                     </div>
                     <div class="project-info">
                         <div class="info-item">
