--- a/projects_overview.html
+++ b/projects_overview.html
@@ -14,6 +14,13 @@
         />
         <style>
 
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+
             .center-align  {
                 
                 margin-bottom: 15px;
@@ -34,7 +41,7 @@
             }
 
             .header-title {
-                color: #73d2e7;
+                color: black;
                 margin: 0;
                 flex-grow: 1;
             }
@@ -209,7 +216,7 @@
                 transition: background-color 0.3s ease;
             }
             .container {
-                margin-left: 10%;
+                margin-left: 17%;
             }
 
             
