--- a/create_project.html
+++ b/create_project.html
@@ -25,22 +25,22 @@
             }
 
             .create-project-form {
-                background-color: #73d2e7;
+                background-color: white;
                 padding: 30px;
                 border-radius: 8px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             }
 
             .page-title {
-                color: white;
+                color: #73d2e7;
                 margin: 0;
                 padding-bottom: 20px;
-                border-bottom: 2px solid var(--fsu-gold);
+                border-bottom: 2px solid #73d2e7;
                 margin-bottom: 30px;
             }
 
             .section-title {
-                color: white;
+                color: #73d2e7;
                 font-size: 1.5rem;
                 margin-top: 30px;
                 margin-bottom: 20px;
@@ -49,7 +49,7 @@
             .team-member-chip {
                 display: inline-flex;
                 align-items: center;
-                background-color: #f5f5f5;
+                background-color: #73d2e7;
                 border-radius: 20px;
                 padding: 5px 15px 5px 5px;
                 margin: 5px;
@@ -73,38 +73,38 @@
             }
 
             .add-member-button {
-                background-color: white;
-                color: #73d2e7;
+                background-color: #73d2e7;
+                color: white;
                 margin-top: 10px;
             }
 
             .add-member-button:hover {
-                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                background-color: rgb(163, 227, 241);  /* Slightly darker shade */
                 transform: translateY(-2px);
                 box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
             }
 
             .submit-button {
-                background-color: white;
-                color: #73d2e7;
+                background-color: #73d2e7;
+                color: white;
                 margin-top: 30px;
             }
 
             .submit-button:hover {
-                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                background-color: rgb(163, 227, 241);  /* Slightly darker shade */
                 transform: translateY(-2px);
                 box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
             }
 
             .cancel-button {
-                background-color: white;
-                color: #73d2e7;
+                background-color: #73d2e7;
+                color: white;
                 margin-top: 30px;
                 margin-right: 15px;
             }
 
             .cancel-button:hover {
-                background-color: rgb(236, 234, 234);  /* Slightly darker shade */
+                background-color: rgb(163, 227, 241);  /* Slightly darker shade */
                 transform: translateY(-2px);
                 box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
             }
@@ -140,7 +140,7 @@
 
             .team-member-option.selected {
                 background-color: #f0f0f0;
-                border: 2px solid var(--fsu-garnet);
+                border: 2px solid #73d2e7;
             }
 
             .input-field {
@@ -153,17 +153,17 @@
 
             .input-field input[type="text"]:focus + label,
             .input-field textarea:focus + label {
-                color: var(--fsu-garnet) !important;
+                color: #73d2e7 !important;
             }
 
             .input-field input[type="text"]:focus,
             .input-field textarea:focus {
-                border-bottom: 1px solid var(--fsu-garnet) !important;
-                box-shadow: 0 1px 0 0 var(--fsu-garnet) !important;
+                border-bottom: 1px solid #73d2e7 !important;
+                box-shadow: 0 1px 0 0 #73d2e7 !important;
             }
 
             .input-field .prefix.active {
-                color: var(--fsu-garnet);
+                color:#73d2e7;
             }
 
             /* Custom styling for date and select fields */
@@ -186,7 +186,7 @@
                 left: 0;
                 font-size: 0.8rem;
                 cursor: text;
-                color: white;
+                color: #73d2e7;
                 margin-left: 3rem;
             }
 
