--- a/project_new_analytics_athlyte.html
+++ b/project_new_analytics_athlyte.html
@@ -523,7 +523,7 @@
                 
                 <div class="sidebar-item">
                     <i class="material-icons">home</i>
-                    <a href="projects_overview.html"> Home </a>
+                    <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
                 </div>
                 <div class="sidebar-item">
                     <i class="material-icons">assignment</i>
