--- a/project_new_athylte.html
+++ b/project_new_athylte.html
@@ -1031,10 +1031,10 @@ class="logo-above-sidebar"
 
 <nav class="sidebar">
 <!-- remove the img from here -->
-<div class="sidebar-item">
-    <i class="material-icons">home</i>
-    <a href="projects_overview.html"> Home </a>
-</div>
+            <div class="sidebar-item">
+                <i class="material-icons">home</i>
+                <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
+            </div>
             <div class="sidebar-item active">
                 <i class="material-icons">assignment</i>
                 <span>Project</span>
