--- a/project_new_research_page_athlyte.html
+++ b/project_new_research_page_athlyte.html
@@ -1476,7 +1476,7 @@ class="logo-above-sidebar"
         
         <div class="nav-item">
             <i class="material-icons">home</i>
-            <a href="projects_overview.html"> Home </a>
+            <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
         </div>
         <div class="nav-item">
             <i class="material-icons">assignment</i>
