--- a/projetc_new_marketing_athlyte.html
+++ b/projetc_new_marketing_athlyte.html
@@ -1003,7 +1003,7 @@
         
         <div class="sidebar-item">
             <i class="material-icons">home</i>
-            <a href="projects_overview.html"> Home </a>
+            <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">assignment</i>
