--- a/project_new_content_draft_athlyte.html
+++ b/project_new_content_draft_athlyte.html
@@ -1438,7 +1438,7 @@ class="logo-above-sidebar"
             
             <div class="sidebar-item">
                 <i class="material-icons">home</i>
-                <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
+                <a href="index.html"> Home </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">assignment</i>
