--- a/project_new_publish_athlyte.html
+++ b/project_new_publish_athlyte.html
@@ -843,7 +843,7 @@
         
         <div class="sidebar-item">
             <i class="material-icons">home</i>
-            <a href="index.Projects_Overview _ Athlyte.html"> Home </a>
+            <a href="index.html"> Home </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">assignment</i>
