link to index page

--- a/calendar_new.html
+++ b/calendar_new.html
@@ -272,7 +272,7 @@
                 class="view-selector"
                 onchange="window.location.href = this.value"
                 >
-                    <option value="projects_overview.html">
+                    <option value="index.html">
                         Workflow View
                     </option>
                     <option value="grid_view.html">Grid View</option>
