--- a/create_project.html
+++ b/create_project.html
@@ -256,7 +256,7 @@
 
              <!-- Add this inside the archive-header div, at the beginning -->
 <div class="home-button">
-    <a href="projects_overview.html" class="btn-floating btn-large waves-effect waves-light">
+    <a href="index.html" class="btn-floating btn-large waves-effect waves-light">
       <i class="material-icons">home</i>
     </a>
   </div>
