--- a/calendar_new.html
+++ b/calendar_new.html
@@ -263,7 +263,7 @@
     <div class="container">
         <div class="header">
             
-            <h1>FSU Projects Calendar</h1>
+            <h1>Projects Calendar</h1>
         </div>
         <div style="display: flex; justify-content: flex-end; margin-bottom: 20px;">
             <div style="width: 200px">
