--- a/grid_view.html
+++ b/grid_view.html
@@ -149,7 +149,7 @@
         </div>
         <div class="container">
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-                <h3 style="color: #73d2e7; margin: 0">Projects Overview</h3>
+                <h3 style="color: black; margin: 0">Projects Overview</h3>
                 <div style="width: 200px">
                     <select id="viewSelector" class="browser-default" style="background-color: #73d2e7; color: white; border: none; border-radius: 4px; padding: 8px; width: 100%;"                         onchange="location = this.value"
 >
