--- a/project_new_publish_athlyte.html
+++ b/project_new_publish_athlyte.html
@@ -1055,7 +1055,7 @@
                                     <h4>Season Ticket Promotion</h4>
                                     <p>
                                         Get ready for an unforgettable season
-                                        with FSU Football! Early bird season
+                                        with Purdue Football! Early bird season
                                         tickets now available with exclusive
                                         benefits for loyal fans...
                                     </p>
