--- a/projetc_new_marketing_athlyte.html
+++ b/projetc_new_marketing_athlyte.html
@@ -1179,7 +1179,7 @@
                             </div>
                             <div class="text-preview">
                                 <h4>Season Ticket Promotion</h4>
-                                <p>Get ready for an unforgettable season with FSU Football! Early bird season tickets now available with exclusive benefits for loyal fans...</p>
+                                <p>Get ready for an unforgettable season with Purdue Football! Early bird season tickets now available with exclusive benefits for loyal fans...</p>
                             </div>
                         </div>
                     </div>
