--- a/project_new_analytics_athlyte.html
+++ b/project_new_analytics_athlyte.html
@@ -522,8 +522,8 @@
             <nav class="sidebar">
                 
                 <div class="sidebar-item">
-                    <i class="material-icons">home</i>
-                    <a href="index.html"> Home </a>
+                    <i class="material-icons">dashboard</i>
+                    <a href="index.html"> Overview </a>
                 </div>
                 <div class="sidebar-item">
                     <i class="material-icons">assignment</i>
