--- a/project_new_content_draft_athlyte.html
+++ b/project_new_content_draft_athlyte.html
@@ -1437,8 +1437,8 @@ class="logo-above-sidebar"
         <aside class="left-sidebar">
             
             <div class="sidebar-item">
-                <i class="material-icons">home</i>
-                <a href="index.html"> Home </a>
+                <i class="material-icons">dashboard</i>
+                    <a href="index.html"> Overview </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">assignment</i>
