--- a/project_new_research_page_athlyte.html
+++ b/project_new_research_page_athlyte.html
@@ -1475,8 +1475,8 @@ class="logo-above-sidebar"
     <aside class="sidebar">
         
         <div class="nav-item">
-            <i class="material-icons">home</i>
-            <a href="index.html"> Home </a>
+            <i class="material-icons">dashboard</i>
+            <a href="index.html"> Overview </a>
         </div>
         <div class="nav-item">
             <i class="material-icons">assignment</i>
