--- a/project_new_athylte.html
+++ b/project_new_athylte.html
@@ -1029,8 +1029,8 @@ class="logo-above-sidebar"
 <nav class="sidebar">
 <!-- remove the img from here -->
             <div class="sidebar-item">
-                <i class="material-icons">home</i>
-                <a href="index.html"> Home </a>
+                <i class="material-icons">dashboard</i>
+                    <a href="index.html"> Overview </a>
             </div>
             <div class="sidebar-item active">
                 <i class="material-icons">assignment</i>
