--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
                                 "
                                 onmouseover="this.style.opacity='0.8'"
                                 onmouseout="this.style.opacity='1'"
-                                >Seminoles Championship Run</a
+                                >Roadrunners roll past Coastal Carolina in Myrtle Beach Bowl</a
                             ></strong
                         >
                         <div style="font-size: 0.9rem; color: gray">
-                            Brief description of Seminoles Championship Run
+                            UTSA set for Myrtle Beach Bowl matchup against Coastal Carolina
                         </div>
                         <div class="chip-container">
                             <div class="deadline-chip">Due Apr 1</div>
@@ -356,6 +356,73 @@
                             class="user-image"
                         />
                     </div>
+
+                    <div
+                        class="kanban-card"
+                        draggable="true"
+                        ondragstart="handleDragStart(event)"
+                        ondragend="handleDragEnd(event)"
+                    >
+                        <strong
+                            ><a
+                                href="#"
+                                style="
+                                    color: inherit;
+                                    text-decoration: none;
+                                    transition: opacity 0.2s ease-in-out;
+                                "
+                                onmouseover="this.style.opacity='0.8'"
+                                onmouseout="this.style.opacity='1'"
+                                >10 Things to Know - Missouri</a
+                            ></strong
+                        >
+                        <div style="font-size: 0.9rem; color: gray">
+                            The Razorbacks, bowl eligible for the fourth time in five campaigns under the head coach Sam Pittman, wrap up the regulari season with a road trip to Columbia, Mo., for this year's edition of the Battle Line Rivalry.
+                        </div>
+                        <div class="chip-container">
+                            <div class="deadline-chip">Due Apr 20</div>
+                            <div class="review-chip">Needs Review</div>
+                        </div>
+                        <img
+                            src="https://randomuser.me/api/portraits/women/2.jpg"
+                            alt="User"
+                            class="user-image"
+                        />
+                    </div>
+
+                    <div
+                    class="kanban-card"
+                    draggable="true"
+                    ondragstart="handleDragStart(event)"
+                    ondragend="handleDragEnd(event)"
+                >
+                    <strong
+                        ><a
+                            href="#"
+                            style="
+                                color: inherit;
+                                text-decoration: none;
+                                transition: opacity 0.2s ease-in-out;
+                            "
+                            onmouseover="this.style.opacity='0.8'"
+                            onmouseout="this.style.opacity='1'"
+                            >Arkansas Defeats Texas Tech, 39-26, in Liberty Bowl</a
+                        ></strong
+                    >
+                    <div style="font-size: 0.9rem; color: gray">
+                        Arkansas defeated Texas Teach, 39-26, to win its fourth straight Liberty Bowl.
+                    </div>
+                    <div class="chip-container">
+                        <div class="deadline-chip">Due May 10</div>
+                        <div class="review-chip">Needs Review</div>
+                    </div>
+                    <img
+                        src="https://randomuser.me/api/portraits/women/2.jpg"
+                        alt="User"
+                        class="user-image"
+                    />
+                </div>
+
                 </div>
                 <div
                     class="kanban-column"
