--- a/athlyte_nm_new.html
+++ b/athlyte_nm_new.html
@@ -147,6 +147,7 @@
             font-weight: 500;
         }
 
+
         .card-desc {
             color: #666;
             font-size: 14px;
@@ -165,6 +166,12 @@
         .btn-primary {
             background-color: #73d2e7;
             color: var(--white);
+        }
+
+        .btn a {
+            text-decoration: none;
+            color: aliceblue;
+
         }
 
         .btn-primary:hover {
