--- a/athlyte_nm_new.html
+++ b/athlyte_nm_new.html
@@ -106,6 +106,10 @@
             padding: 20px;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%; /* ensure consistent height */
         }
 
         .action-card:hover {
@@ -155,23 +159,32 @@
         }
 
         .btn {
-            padding: 8px 16px;
+            display: inline-block;
+            background-color: #73d2e7;
+            color: white;
             border: none;
+            padding: 0.75rem 1.5rem;
             border-radius: 4px;
+            font-size: 1rem;
             cursor: pointer;
-            font-weight: 500;
+            text-align: center;
+            text-decoration: none; /* removes underline from <a> */
             transition: background-color 0.3s;
+            margin: 0.5rem 0; /* ensures spacing is consistent */
+            min-width: 150px; /* optional for uniform width */
         }
+
+        .btn-container {
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+            justify-content: center; /* or space-between / flex-start */
+        }
+
 
         .btn-primary {
             background-color: #73d2e7;
             color: var(--white);
-        }
-
-        .btn a {
-            text-decoration: none;
-            color: aliceblue;
-
         }
 
         .btn-primary:hover {
@@ -539,7 +552,7 @@
                     <h3 class="card-title">Stats Research</h3>
                 </div>
                 <p class="card-desc">Access Stats Research tools.</p>
-                <a href="https://pilot.athlytesports.com/login" class="btn btn-primary">Research</a>
+                <button class="btn btn-primary" onclick=" window.open('https://pilot.athlytesports.com/login','_blank')">Research</button>        
             </div>
         </div>
     </div>
