--- a/narrative_generation_athlyte.html
+++ b/narrative_generation_athlyte.html
@@ -526,8 +526,8 @@
                         ],
                         "Bo Nix": [    
                             {
-                                text: "Bo Nix has lead the Broncos to a 9-5 record. What a season so far for the rook",
-                                img: "https://scontent.fhyd2-3.fna.fbcdn.net/v/t39.30808-6/496875620_1238263528307257_4575269543345632682_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=DNcoHw1gQl8Q7kNvwH1t80z&_nc_oc=Adl1ba1Mf7B6uhGJVGQhZDKLYAmQwiqh3XZkQMhWm-v9bIX6mdmwzpKYS4cr6N4qNxM&_nc_zt=23&_nc_ht=scontent.fhyd2-3.fna&_nc_gid=5geR4a6WqaFJ4CEEpMq6ow&oh=00_AfJPVaPDmRGOWymgY7-HdKkPvBD-ouDsgoMi7rzb5fjYxw&oe=683CB6A7"
+                                text: "Kyle McCord's stats as Ohio State's QB1 vs. Indiana.",
+                                img: "https://pbs.twimg.com/media/F5D-d4hXwAAd5sB.jpg:large"
                             }
                         ],
                         "Jordan Watkins": [
