updated Up next

--- a/narrative_generation_athlyte.html
+++ b/narrative_generation_athlyte.html
@@ -611,8 +611,8 @@
                         ],
                         "": [
                             {
-                                text: "Illinois is 13-5 in games with more than six days rest since Bielema’s arrival in 2021, including 11-3 over the last three seasons and a 3-1 record this season.",
-                                img: "https://cdn.vox-cdn.com/thumbor/oFM4ycPmIqm0g5Ee_cCIvXRKs_w=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/24164454/usa_today_19332571.jpg"
+                                text: "Arkansas vs. Missouri",
+                                img: "https://ik.imagekit.io/gcdj03xqg/Arkansas%20vs%20Missouri_upnext_sample.png?updatedAt=1748520997594"
                             }
                         ]
                         
