--- a/athlyte_nm_new.html
+++ b/athlyte_nm_new.html
@@ -581,15 +581,15 @@
           <div class="form-group">
            <!-- Add this to your existing HTML where you want the news selection to appear -->
 <div class="news-grid" id="newsGrid">
-    <div class="news-item" data-news="Quarterback injured during practice.">
+    <div class="news-item" data-news="After the game against Georgia, Dylan Sampson is at the top of the record rankings with 21 rushing touchdowns in the season. He is in second with 1288 rushing yards in the season.">
       <span class="news-text">After the game against Georgia, Dylan Sampson is at the top of the record rankings with 21 rushing touchdowns in the season. He is in second with 1288 rushing yards in the season.</span>
       <span class="tick-icon">✓</span>
     </div>
-    <div class="news-item" data-news="Coach announces new lineup for Saturday.">
+    <div class="news-item" data-news="Anthony Hill Jr. had 2 sacks for 19 yards and a forced fumble in the game against Kentucky taking the sophomore up the record rankings tied at 2nd for sacks in a game.">
       <span class="news-text">Anthony Hill Jr. had 2 sacks for 19 yards and a forced fumble in the game against Kentucky taking the sophomore up the record rankings tied at 2nd for sacks in a game.</span>
       <span class="tick-icon">✓</span>
     </div>
-    <div class="news-item" data-news="Unexpected weather delays game.">
+    <div class="news-item" data-news="PARKER,T.J. with 4 Defensive Sacks (Total) in the game against Pittsburgh is now 1 on the list of most Defensive Sacks (Total) in a Game in school's history.">
       <span class="news-text">PARKER,T.J. with 4 Defensive Sacks (Total) in the game against Pittsburgh is now 1 on the list of most Defensive Sacks (Total) in a Game in school's history.</span>
       <span class="tick-icon">✓</span>
     </div>
